# saia-ingest

./: .gitignore  API.md  CONTRIBUTION.md  EnterpriseAISuite.md  LICENSE  README.md  geai_ingestion.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pytest.yml
amazon_s3/: s3_config.md  s3reader.py
atlassian_confluence/: confluence_config.md  confluencereader.py
atlassian_jira/: jira_config.md  jirareader.py
docs/: github_config.md
fs/: filesystem_config.md  simple_folder_reader.py
gdrive/: __init__.py  gdrive_config.md  gdrive_reader.py
saia_ingest/: __init__.py  assistant_utils.py  config.py  file_utils.py  ingestor.py  log.py  profile_utils.py  rag_api.py  sanitization.py  utils.py  vectorstore.py
saia_ingest/command_line/: command_line.py
saia_ingest/vault/: keyvault_client.py
sharepoint/: drive_reader.py  path_reader.py  sharepoint_config.md  sharepoint_ingestor.py  sharepoint_item.py  sharepoint_reader.py  site_reader.py  subTipoDoc.yaml  translate.yaml
tests/: conftest.py  test_api.py  test_gdrive_reader.py  test_proxy.py
