[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "saia-ingest"
description = "Globant Enterprise AI Ingest utilities"
authors = ["Luciano Silveira <lsilveira@genexus.com>"]
license = "MIT"
#packages = [{include = "saia-ingest"}]
readme = "README.md"
repository = "https://www.github.com/genexuslabs/saia-ingest"
version = "0.0.2"

[tool.poetry.scripts]
saia-cli = 'saia_ingest.command_line.command_line:main'


[tool.poetry.dependencies]
python = "^3.9,<4.0"
atlassian-python-api = "^3.41.16"
boto3 = "^1.34.0"
google-api-core = "^2.11.0"
google-auth = "^2.19.1"
google-cloud-aiplatform = "^1.75.0"
google-cloud-bigquery = "^3.26.0"
google-cloud-core = "^2.3.2"
google-cloud-resource-manager = "^1.10.1"
google-cloud-storage = "^2.18.1"
google-resumable-media = "^2.5.0"
googleapis-common-protos = "^1.59.0"
jira = "^3.5.2"
langchain = "^0.2.17"
langchain_community = "^0.2.17"
llama-index-readers-github = "*"
llama-index = "^0.12.41"
pytest = "^8.3.3"
python-dotenv = "^0.19.2"
PyYAML = "^6.0"
regex = "*"
python-magic = { version = "^0.4.27", platform = "linux"}
python-magic-bin = {version = "^0.4.14", platform = "win32"}
google-auth-oauthlib = "^1.2.0"
pydrive2 = "^1.21.3"
docx2txt = "^0.8"
azure-identity = "^1.19.0"
azure-keyvault-secrets = "^4.8.0"
nltk = "3.9.1"
chardet = "^5.2.0"
retrying = "^1.3.4"
xlrd = "^2.0.1"
html2text = "^2025.4.15"
pytesseract = "^0.3.10"
Pillow = "^10.0.1"
svglib = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
debugpy = "^1.8.0"
deptry = "^0.23.0"

